--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,10 +13,11 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["shell-open"] }
+tauri = { version = "1.2.4", features = ["shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 specta = "1.0.0"
+window-shadows = "0.2.1"
 tauri-specta = { version = "1.0.0", features = ["javascript", "typescript"] }
 
 [features]
