feat(library): implement library configuration feature

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-transition-group": "^4.4.5",
+    "react-use-measure": "^2.1.1",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
