--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "cruise",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "electron --watch -r @swc-node/register ./scripts/dev.ts",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,7 +13,7 @@
     "@fluentui/react-icons": "^2.0.195",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.10",
-    "@tauri-apps/api": "^1.2.0",
+    "electron": "^23.1.1",
     "memoize-one": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,8 +22,9 @@
     "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "@swc-node/register": "^1.6.2",
+    "@swc/core": "^1.3.37",
     "@swc/plugin-emotion": "^2.5.43",
-    "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
