--- a/package.json
+++ b/package.json
@@ -1,44 +1,51 @@
 {
-  "name": "cruise",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "electron --watch -r @swc-node/register ./scripts/dev.ts",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@fluentui/react-icons": "^2.0.195",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.10",
-    "electron": "^23.1.1",
-    "memoize-one": "^6.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-use-measure": "^2.1.1",
-    "shortid": "^2.2.16"
-  },
-  "devDependencies": {
-    "@swc-node/register": "^1.6.2",
-    "@swc/core": "^1.3.37",
-    "@swc/plugin-emotion": "^2.5.43",
-    "@types/node": "^18.7.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@types/shortid": "^0.0.29",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "@vitejs/plugin-react-swc": "^3.2.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
-    "typescript": "^4.6.4",
-    "vite": "^4.0.0",
-    "vite-tsconfig-paths": "^4.0.5"
-  }
+    "name": "cruise",
+    "private": true,
+    "version": "0.0.0",
+    "main": "dist-main/main/index.js",
+    "scripts": {
+        "dev": "electron --watch -r @swc-node/register ./scripts/dev.ts",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@fluentui/react-icons": "^2.0.195",
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.10",
+        "@trpc/client": "^10.13.2",
+        "@trpc/server": "^10.13.2",
+        "electron": "^23.1.1",
+        "electron-trpc": "^0.4.2",
+        "memoize-one": "^6.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.2",
+        "react-use-measure": "^2.1.1",
+        "shortid": "^2.2.16"
+    },
+    "devDependencies": {
+        "@swc-node/register": "^1.6.2",
+        "@swc/core": "^1.3.37",
+        "@swc/plugin-emotion": "^2.5.43",
+        "@types/node": "^18.7.10",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@types/shortid": "^0.0.29",
+        "@typescript-eslint/eslint-plugin": "^5.54.0",
+        "@typescript-eslint/parser": "^5.54.0",
+        "@vitejs/plugin-react-swc": "^3.2.0",
+        "esbuild": "^0.17.10",
+        "eslint": "^8.35.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.8.4",
+        "typescript": "^4.6.4",
+        "vite": "^4.0.0",
+        "vite-electron-plugin": "^0.8.2",
+        "vite-plugin-electron-renderer": "^0.12.1",
+        "vite-tsconfig-paths": "^4.0.5"
+    }
 }
