--- a/package.json
+++ b/package.json
@@ -4,31 +4,37 @@
     "version": "0.0.0",
     "main": "dist-main/main/index.js",
     "scripts": {
-        "dev": "electron --watch -r @swc-node/register ./scripts/dev.ts",
+        "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@async3619/merry-go-round": "^1.1.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.10",
+        "@tanstack/react-query": "^4.24.10",
         "@trpc/client": "^10.13.2",
+        "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
         "electron": "^23.1.1",
         "electron-trpc": "^0.4.2",
+        "fs-extra": "^11.1.0",
         "memoize-one": "^6.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
-        "shortid": "^2.2.16"
+        "shortid": "^2.2.16",
+        "zod": "^3.20.6"
     },
     "devDependencies": {
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.37",
         "@swc/plugin-emotion": "^2.5.43",
+        "@types/fs-extra": "^11.0.1",
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
