--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "cruise",
     "private": true,
     "version": "0.0.0",
-    "main": "dist-main/main/index.js",
+    "type": "commonjs",
+    "main": "dist-main/index.js",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -21,6 +22,7 @@
         "@trpc/server": "^10.13.2",
         "electron": "^23.1.1",
         "electron-trpc": "^0.4.2",
+        "fast-glob": "^3.2.12",
         "fs-extra": "^11.1.0",
         "memoize-one": "^6.0.0",
         "react": "^18.2.0",
@@ -28,9 +30,13 @@
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
         "shortid": "^2.2.16",
+        "sqlite3": "^5.1.4",
+        "typeorm": "^0.3.12",
+        "typia": "^3.6.2",
         "zod": "^3.20.6"
     },
     "devDependencies": {
+        "@rollup/plugin-typescript": "^11.0.0",
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.37",
         "@swc/plugin-emotion": "^2.5.43",
@@ -48,10 +54,13 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.8.4",
+        "ts-node": "^10.9.1",
+        "ttypescript": "^1.5.15",
         "typescript": "^4.6.4",
         "vite": "^4.0.0",
-        "vite-electron-plugin": "^0.8.2",
+        "vite-plugin-electron": "^0.11.1",
         "vite-plugin-electron-renderer": "^0.12.1",
+        "vite-plugin-no-bundle": "^2.0.2",
         "vite-tsconfig-paths": "^4.0.5"
     }
 }
