feat(internal): implement graphql based interprocess communication

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "codegen": "graphql-codegen --config codegen.yml"
     },
     "dependencies": {
+        "@apollo/client": "^3.7.9",
         "@async3619/merry-go-round": "^1.1.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
@@ -20,22 +22,36 @@
         "@trpc/client": "^10.13.2",
         "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
-        "electron": "^23.1.1",
+        "class-validator": "^0.14.0",
+        "electron": "^23.1.2",
         "electron-trpc": "^0.4.2",
         "fast-glob": "^3.2.12",
         "fs-extra": "^11.1.0",
+        "graphql": "^15.3.0",
+        "graphql-tag": "^2.12.6",
+        "iterall": "^1.3.0",
         "memoize-one": "^6.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
+        "reflect-metadata": "^0.1.13",
+        "serialize-error": "^8.1.0",
         "shortid": "^2.2.16",
         "sqlite3": "^5.1.4",
-        "typeorm": "^0.3.12",
+        "type-graphql": "^1.1.1",
+        "typedi": "^0.10.0",
+        "typeorm": "^0.3.13-dev.58fc088",
         "typia": "^3.6.2",
+        "zen-observable-ts": "^1.1.0",
         "zod": "^3.20.6"
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^3.2.1",
+        "@graphql-codegen/typescript": "^3.0.1",
+        "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
+        "@graphql-codegen/typescript-operations": "^3.0.1",
+        "@graphql-codegen/typescript-react-apollo": "^3.3.7",
         "@rollup/plugin-typescript": "^11.0.0",
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.37",
