--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.7.9",
-        "@async3619/merry-go-round": "^1.1.0",
+        "@async3619/merry-go-round": "^1.3.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
@@ -23,6 +23,7 @@
         "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
         "class-validator": "^0.14.0",
+        "dataloader": "^2.2.2",
         "electron": "^23.1.2",
         "electron-trpc": "^0.4.2",
         "fast-glob": "^3.2.12",
@@ -30,6 +31,7 @@
         "graphql": "^15.3.0",
         "graphql-tag": "^2.12.6",
         "iterall": "^1.3.0",
+        "lodash": "^4.17.21",
         "memoize-one": "^6.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -57,6 +59,7 @@
         "@swc/core": "^1.3.37",
         "@swc/plugin-emotion": "^2.5.43",
         "@types/fs-extra": "^11.0.1",
+        "@types/lodash": "^4.14.191",
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
