--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "graphql-tag": "^2.12.6",
         "iterall": "^1.3.0",
         "lodash": "^4.17.21",
+        "material-ui-popup-state": "^5.0.4",
         "memoize-one": "^6.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
