--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^8.1.0",
+        "sharp": "^0.31.3",
         "shortid": "^2.2.16",
         "sqlite3": "^5.1.4",
         "type-graphql": "^1.1.1",
@@ -65,6 +66,7 @@
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/sharp": "^0.31.1",
         "@types/shortid": "^0.0.29",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
