--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "graphql": "^15.3.0",
         "graphql-tag": "^2.12.6",
         "iterall": "^1.3.0",
+        "localforage": "^1.10.0",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^5.0.4",
         "memoize-one": "^6.0.0",
