--- a/package.json
+++ b/package.json
@@ -48,10 +48,9 @@
         "type-graphql": "^1.1.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
-        "typia": "^3.6.2",
         "utility-types": "^3.10.0",
         "zen-observable-ts": "^1.1.0",
-        "zod": "^3.20.6"
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^3.2.1",
@@ -59,7 +58,6 @@
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-        "@rollup/plugin-typescript": "^11.0.0",
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.37",
         "@swc/plugin-emotion": "^2.5.43",
@@ -80,9 +78,9 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.8.4",
         "ts-node": "^10.9.1",
-        "ttypescript": "^1.5.15",
         "typescript": "^4.6.4",
         "vite": "^4.0.0",
+        "vite-plugin-checker": "^0.5.6",
         "vite-plugin-electron": "^0.11.1",
         "vite-plugin-electron-renderer": "^0.12.1",
         "vite-plugin-no-bundle": "^2.0.2",
