--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "private": true,
     "version": "0.0.0",
     "type": "commonjs",
-    "main": "dist-main/index.js",
+    "main": "out/main/index.js",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview",
+        "start": "electron-vite preview",
+        "dev": "electron-vite dev",
+        "build": "electron-vite build",
         "codegen": "graphql-codegen --config codegen.yml"
     },
     "dependencies": {
@@ -53,14 +53,15 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@electron-toolkit/utils": "^1.0.2",
         "@graphql-codegen/cli": "^3.2.1",
         "@graphql-codegen/typescript": "^3.0.1",
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
         "@swc-node/register": "^1.6.2",
-        "@swc/core": "^1.3.37",
-        "@swc/plugin-emotion": "^2.5.43",
+        "@swc/core": "^1.3.40",
+        "@swc/plugin-emotion": "^2.5.47",
         "@types/fs-extra": "^11.0.1",
         "@types/lodash": "^4.14.191",
         "@types/node": "^18.7.10",
@@ -71,6 +72,7 @@
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
         "@vitejs/plugin-react-swc": "^3.2.0",
+        "electron-vite": "^1.0.20",
         "esbuild": "^0.17.10",
         "eslint": "^8.35.0",
         "eslint-config-prettier": "^8.6.0",
@@ -79,11 +81,7 @@
         "prettier": "^2.8.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
-        "vite": "^4.0.0",
-        "vite-plugin-checker": "^0.5.6",
-        "vite-plugin-electron": "^0.11.1",
-        "vite-plugin-electron-renderer": "^0.12.1",
-        "vite-plugin-no-bundle": "^2.0.2",
+        "vite": "^4.1.4",
         "vite-tsconfig-paths": "^4.0.5"
     }
 }
