--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
         "vite": "^4.1.4",
+        "vite-plugin-checker": "^0.5.6",
         "vite-tsconfig-paths": "^4.0.5"
     }
 }
