--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
         "react": "^18.2.0",
         "react-custom-scrollbars-2": "^4.5.0",
         "react-dom": "^18.2.0",
+        "react-measure": "^2.5.2",
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^8.1.0",
         "sharp": "^0.31.3",
         "shortid": "^2.2.16",
-        "sqlite3": "^5.1.4",
+        "sqlite3": "^5.1.6",
         "type-graphql": "^1.1.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
@@ -67,6 +68,7 @@
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/react-measure": "^2.0.8",
         "@types/sharp": "^0.31.1",
         "@types/shortid": "^0.0.29",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
