--- a/package.json
+++ b/package.json
@@ -12,23 +12,36 @@
     },
     "dependencies": {
         "@apollo/client": "^3.7.9",
+        "@apollo/server": "^4.3.2",
+        "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
+        "@apollo/subgraph": "^2.0.0",
+        "@as-integrations/fastify": "^1.3.2",
         "@async3619/merry-go-round": "^1.3.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.10",
+        "@nestjs/apollo": "^11.0.3",
+        "@nestjs/common": "^9.3.10",
+        "@nestjs/core": "^9.3.10",
+        "@nestjs/graphql": "^11.0.0",
+        "@nestjs/platform-express": "^9.3.10",
+        "@nestjs/typeorm": "^9.0.1",
         "@tanstack/react-query": "^4.24.10",
         "@trpc/client": "^10.13.2",
         "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
+        "body-parser": "^1.20.2",
+        "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dataloader": "^2.2.2",
         "electron": "^23.1.2",
         "electron-trpc": "^0.4.2",
+        "express": "^4.18.2",
         "fast-glob": "^3.2.12",
         "fs-extra": "^11.1.0",
-        "graphql": "^15.3.0",
+        "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
         "iterall": "^1.3.0",
         "localforage": "^1.10.0",
@@ -42,11 +55,12 @@
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
+        "rxjs": "^7.8.0",
         "serialize-error": "^8.1.0",
         "sharp": "^0.31.3",
         "shortid": "^2.2.16",
         "sqlite3": "^5.1.6",
-        "type-graphql": "^1.1.1",
+        "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
         "utility-types": "^3.10.0",
@@ -60,10 +74,13 @@
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+        "@nestjs/testing": "^9.3.10",
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
+        "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
+        "@types/jest": "^29.5.0",
         "@types/lodash": "^4.14.191",
         "@types/node": "^18.7.10",
         "@types/react": "^18.0.15",
@@ -80,7 +97,9 @@
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.5.0",
         "prettier": "^2.8.4",
+        "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
         "vite": "^4.1.4",
