--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
+        "@hookform/resolvers": "^2.9.11",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.10",
         "@nestjs/apollo": "^11.0.3",
@@ -32,6 +33,7 @@
         "@trpc/client": "^10.13.2",
         "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
+        "autosuggest-highlight": "^3.3.4",
         "body-parser": "^1.20.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
@@ -51,7 +53,9 @@
         "react": "^18.2.0",
         "react-custom-scrollbars-2": "^4.5.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.7",
         "react-measure": "^2.5.2",
+        "react-merge-refs": "^2.0.1",
         "react-router-dom": "^6.8.2",
         "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
@@ -78,6 +82,7 @@
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
+        "@types/autosuggest-highlight": "^3.2.0",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.0",
