--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "electron-vite preview",
         "dev": "electron-vite dev",
         "build": "electron-vite build",
-        "codegen": "graphql-codegen --config codegen.yml"
+        "codegen": "graphql-codegen --config codegen.yml",
+        "postinstall": "electron-rebuild"
     },
     "dependencies": {
         "@apollo/client": "^3.7.9",
@@ -17,6 +18,7 @@
         "@apollo/subgraph": "^2.0.0",
         "@as-integrations/fastify": "^1.3.2",
         "@async3619/merry-go-round": "^1.3.0",
+        "@electron/rebuild": "^3.2.10",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
@@ -34,6 +36,7 @@
         "@trpc/react-query": "^10.13.2",
         "@trpc/server": "^10.13.2",
         "autosuggest-highlight": "^3.3.4",
+        "blake2": "^5.0.0",
         "body-parser": "^1.20.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
@@ -42,6 +45,8 @@
         "electron-trpc": "^0.4.2",
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
+        "file-type": "^18.2.1",
+        "filesize": "^10.0.6",
         "fs-extra": "^11.1.0",
         "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
@@ -83,6 +88,7 @@
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
         "@types/autosuggest-highlight": "^3.2.0",
+        "@types/blake2": "^4.0.1",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.0",
