--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
         "@apollo/subgraph": "^2.0.0",
         "@as-integrations/fastify": "^1.3.2",
-        "@async3619/merry-go-round": "^1.3.0",
+        "@async3619/merry-go-round": "^1.4.0",
         "@electron/rebuild": "^3.2.10",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
@@ -45,7 +45,7 @@
         "electron-trpc": "^0.4.2",
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
-        "file-type": "^18.2.1",
+        "file-type": "^16.5.4",
         "filesize": "^10.0.6",
         "fs-extra": "^11.1.0",
         "graphql": "^16.6.0",
@@ -68,6 +68,7 @@
         "serialize-error": "^8.1.0",
         "sharp": "^0.31.3",
         "shortid": "^2.2.16",
+        "source-map-support": "^0.5.21",
         "sqlite3": "^5.1.6",
         "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
