--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dataloader": "^2.2.2",
+        "decompress": "^4.2.1",
         "electron": "^23.1.2",
+        "electron-devtools-installer": "^3.2.0",
         "electron-trpc": "^0.4.2",
         "express": "^4.18.2",
         "fast-glob": "^3.2.12",
@@ -90,6 +92,7 @@
         "@swc/plugin-emotion": "^2.5.47",
         "@types/autosuggest-highlight": "^3.2.0",
         "@types/blake2": "^4.0.1",
+        "@types/decompress": "^4.2.4",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.0",
