--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
         "@nestjs/testing": "^9.3.10",
+        "@svgr/plugin-jsx": "^6.5.1",
+        "@svgr/plugin-svgo": "^6.5.1",
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
@@ -119,6 +121,7 @@
         "typescript": "^4.6.4",
         "vite": "^4.1.4",
         "vite-plugin-checker": "^0.5.6",
+        "vite-plugin-svgr": "^2.4.0",
         "vite-tsconfig-paths": "^4.0.5"
     }
 }
