--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "autosuggest-highlight": "^3.3.4",
         "blake2": "^5.0.0",
         "body-parser": "^1.20.2",
+        "chokidar": "^3.5.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dataloader": "^2.2.2",
@@ -51,6 +52,7 @@
         "filesize": "^10.0.6",
         "fs-extra": "^11.1.0",
         "graphql": "^16.6.0",
+        "graphql-subscriptions": "^2.0.0",
         "graphql-tag": "^2.12.6",
         "iterall": "^1.3.0",
         "localforage": "^1.10.0",
@@ -64,6 +66,7 @@
         "react-measure": "^2.5.2",
         "react-merge-refs": "^2.0.1",
         "react-router-dom": "^6.8.2",
+        "react-spring": "^9.7.1",
         "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.0",
@@ -87,6 +90,7 @@
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
         "@nestjs/testing": "^9.3.10",
+        "@svgr/core": "^7.0.0",
         "@svgr/plugin-jsx": "^6.5.1",
         "@svgr/plugin-svgo": "^6.5.1",
         "@swc-node/register": "^1.6.2",
