--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@nestjs/platform-express": "^9.3.10",
         "@nestjs/typeorm": "^9.0.1",
         "@tanstack/react-query": "^4.24.10",
+        "apollo-link-logger": "^2.0.1",
         "autosuggest-highlight": "^3.3.4",
         "blake2": "^5.0.0",
         "body-parser": "^1.20.2",
