--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "package": "yarn build && electron-builder build --publish never"
     },
     "dependencies": {
-        "@apollo/client": "^3.7.9",
         "@apollo/server": "^4.3.2",
         "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
         "@apollo/subgraph": "^2.0.0",
@@ -23,21 +22,14 @@
         "@async3619/merry-go-round": "^1.4.0",
         "@electron-toolkit/utils": "^1.0.2",
         "@electron/rebuild": "^3.2.10",
-        "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
-        "@fluentui/react-icons": "^2.0.195",
-        "@hookform/resolvers": "^2.9.11",
-        "@mui/icons-material": "^5.11.11",
-        "@mui/material": "^5.11.10",
         "@nestjs/apollo": "^11.0.3",
         "@nestjs/common": "^9.3.10",
         "@nestjs/core": "^9.3.10",
         "@nestjs/graphql": "^11.0.0",
         "@nestjs/platform-express": "^9.3.10",
         "@nestjs/typeorm": "^9.0.1",
-        "@tanstack/react-query": "^4.24.10",
         "apollo-link-logger": "^2.0.1",
-        "autosuggest-highlight": "^3.3.4",
         "blake2": "^5.0.0",
         "body-parser": "^1.20.2",
         "chokidar": "^3.5.3",
@@ -54,26 +46,13 @@
         "graphql": "^16.6.0",
         "graphql-subscriptions": "^2.0.0",
         "graphql-tag": "^2.12.6",
+        "image-size": "^1.0.2",
         "iterall": "^1.3.0",
-        "localforage": "^1.10.0",
         "lodash": "^4.17.21",
-        "material-ui-popup-state": "^5.0.4",
-        "memoize-one": "^6.0.0",
-        "react": "^18.2.0",
-        "react-custom-scrollbars-2": "^4.5.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.43.7",
-        "react-measure": "^2.5.2",
-        "react-merge-refs": "^2.0.1",
-        "react-router-dom": "^6.8.2",
-        "react-spring": "^9.7.1",
-        "react-use-measure": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.0",
         "serialize-error": "^8.1.0",
-        "sharp": "^0.31.3",
         "shortid": "^2.2.16",
-        "source-map-support": "^0.5.21",
         "sqlite3": "^5.1.6",
         "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
@@ -83,11 +62,17 @@
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@apollo/client": "^3.7.9",
+        "@emotion/react": "^11.10.6",
+        "@fluentui/react-icons": "^2.0.195",
         "@graphql-codegen/cli": "^3.2.1",
         "@graphql-codegen/typescript": "^3.0.1",
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
         "@graphql-codegen/typescript-operations": "^3.0.1",
         "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+        "@hookform/resolvers": "^2.9.11",
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.10",
         "@nestjs/testing": "^9.3.10",
         "@svgr/core": "^7.0.0",
         "@svgr/plugin-jsx": "^6.5.1",
@@ -95,6 +80,7 @@
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
+        "@tanstack/react-query": "^4.24.10",
         "@types/autosuggest-highlight": "^3.2.0",
         "@types/blake2": "^4.0.1",
         "@types/decompress": "^4.2.4",
@@ -111,6 +97,7 @@
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
         "@vitejs/plugin-react-swc": "^3.2.0",
+        "autosuggest-highlight": "^3.3.4",
         "electron": "^23.2.0",
         "electron-builder": "^23.6.0",
         "electron-vite": "^1.0.20",
@@ -120,7 +107,20 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "jest": "^29.5.0",
+        "localforage": "^1.10.0",
+        "material-ui-popup-state": "^5.0.4",
+        "memoize-one": "^6.0.0",
         "prettier": "^2.8.4",
+        "react": "^18.2.0",
+        "react-custom-scrollbars-2": "^4.5.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.7",
+        "react-measure": "^2.5.2",
+        "react-merge-refs": "^2.0.1",
+        "react-router-dom": "^6.8.2",
+        "react-spring": "^9.7.1",
+        "react-use-measure": "^2.1.1",
+        "source-map-support": "^0.5.21",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.4",
