--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@nestjs/platform-express": "^9.3.10",
         "@nestjs/typeorm": "^9.0.1",
         "apollo-link-logger": "^2.0.1",
+        "better-sqlite3": "^8.2.0",
         "blake2": "^5.0.0",
         "body-parser": "^1.20.2",
         "chokidar": "^3.5.3",
@@ -53,7 +54,6 @@
         "rxjs": "^7.8.0",
         "serialize-error": "^8.1.0",
         "shortid": "^2.2.16",
-        "sqlite3": "^5.1.6",
         "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
