--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
         "@nestjs/graphql": "^11.0.0",
         "@nestjs/platform-express": "^9.3.10",
         "@nestjs/typeorm": "^9.0.1",
+        "@trpc/client": "^10.19.1",
+        "@trpc/react-query": "^10.19.1",
+        "@trpc/server": "^10.19.1",
         "apollo-link-logger": "^2.0.1",
         "better-sqlite3": "^8.2.0",
         "blake2": "^5.0.0",
@@ -44,6 +47,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dataloader": "^2.2.2",
+        "dayjs": "^1.11.7",
         "decompress": "^4.2.1",
         "electron-devtools-installer": "^3.2.0",
         "express": "^4.18.2",
@@ -65,10 +69,12 @@
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
         "utility-types": "^3.10.0",
+        "yup": "^1.0.2",
         "zen-observable-ts": "^1.1.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@async3619/haunted": "^1.2.0",
         "@emotion/react": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
         "@graphql-codegen/cli": "^3.2.1",
@@ -86,7 +92,7 @@
         "@swc-node/register": "^1.6.2",
         "@swc/core": "^1.3.40",
         "@swc/plugin-emotion": "^2.5.47",
-        "@tanstack/react-query": "^4.24.10",
+        "@tanstack/react-query": "^4.28.0",
         "@types/autosuggest-highlight": "^3.2.0",
         "@types/blake2": "^4.0.1",
         "@types/decompress": "^4.2.4",
