--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "rxjs": "^7.8.0",
         "serialize-error": "^8.1.0",
         "shortid": "^2.2.16",
+        "string-similarity": "^4.0.4",
         "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
@@ -106,6 +107,7 @@
         "@types/react-measure": "^2.0.8",
         "@types/sharp": "^0.31.1",
         "@types/shortid": "^0.0.29",
+        "@types/string-similarity": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
         "@vitejs/plugin-react-swc": "^3.2.0",
