--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "main": "out/main/index.js",
     "scripts": {
         "start": "electron-vite preview",
-        "dev": "electron-vite dev",
+        "dev": "cross-env SWC_NODE_PROJECT=./tsconfig.node.json node -r @swc-node/register ./scripts/dev.ts",
         "build": "yarn type-check && electron-vite build",
         "codegen": "graphql-codegen --config codegen.yml",
         "postinstall": "electron-rebuild",
@@ -69,6 +69,7 @@
         "type-graphql": "^2.0.0-beta.1",
         "typedi": "^0.10.0",
         "typeorm": "^0.3.13-dev.58fc088",
+        "typia": "^3.7.6",
         "utility-types": "^3.10.0",
         "yup": "^1.0.2",
         "zen-observable-ts": "^1.1.0",
@@ -76,6 +77,7 @@
     },
     "devDependencies": {
         "@async3619/haunted": "^1.2.0",
+        "@babel/code-frame": "^7.21.4",
         "@emotion/react": "^11.10.6",
         "@fluentui/react-icons": "^2.0.195",
         "@graphql-codegen/cli": "^3.2.1",
@@ -87,43 +89,53 @@
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.10",
         "@nestjs/testing": "^9.3.10",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
         "@svgr/core": "^7.0.0",
         "@svgr/plugin-jsx": "^6.5.1",
         "@svgr/plugin-svgo": "^6.5.1",
-        "@swc-node/register": "^1.6.2",
-        "@swc/core": "^1.3.40",
-        "@swc/plugin-emotion": "^2.5.47",
+        "@svgr/webpack": "^7.0.0",
+        "@swc-node/register": "^1.6.4",
+        "@swc/core": "^1.3.51",
+        "@swc/plugin-emotion": "^2.5.59",
         "@tanstack/react-query": "^4.28.0",
         "@types/autosuggest-highlight": "^3.2.0",
         "@types/blake2": "^4.0.1",
         "@types/decompress": "^4.2.4",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
+        "@types/indefinite": "^2.3.1",
         "@types/jest": "^29.5.0",
         "@types/lodash": "^4.14.191",
         "@types/node": "^18.7.10",
+        "@types/pluralize": "^0.0.29",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "@types/react-measure": "^2.0.8",
         "@types/sharp": "^0.31.1",
         "@types/shortid": "^0.0.29",
         "@types/string-similarity": "^4.0.0",
+        "@types/webpack-node-externals": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
-        "@vitejs/plugin-react-swc": "^3.2.0",
         "autosuggest-highlight": "^3.3.4",
+        "chalk": "^4.1.2",
+        "cross-env": "^7.0.3",
         "electron": "^23.2.0",
         "electron-builder": "^23.6.0",
-        "electron-vite": "^1.0.20",
         "esbuild": "^0.17.10",
         "eslint": "^8.35.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "fork-ts-checker-webpack-plugin": "^8.0.0",
+        "html-webpack-plugin": "^5.5.1",
+        "indefinite": "^2.4.2",
         "jest": "^29.5.0",
         "localforage": "^1.10.0",
         "material-ui-popup-state": "^5.0.4",
         "memoize-one": "^6.0.0",
+        "pluralize": "^8.0.0",
+        "portfinder": "^1.0.32",
         "prettier": "^2.8.4",
         "react": "^18.2.0",
         "react-custom-scrollbars-2": "^4.5.0",
@@ -131,16 +143,21 @@
         "react-hook-form": "^7.43.7",
         "react-measure": "^2.5.2",
         "react-merge-refs": "^2.0.1",
+        "react-refresh": "^0.14.0",
         "react-router-dom": "^6.8.2",
         "react-spring": "^9.7.1",
         "react-use-measure": "^2.1.1",
         "source-map-support": "^0.5.21",
+        "swc-loader": "^0.2.3",
+        "transpile-webpack-plugin": "^1.1.2",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
+        "tsconfig-paths-webpack-plugin": "^4.0.1",
+        "ttypescript": "^1.5.15",
         "typescript": "^4.6.4",
-        "vite": "^4.1.4",
-        "vite-plugin-checker": "^0.5.6",
-        "vite-plugin-svgr": "^2.4.0",
-        "vite-tsconfig-paths": "^4.0.5"
+        "webpack": "^5.79.0",
+        "webpack-dev-server": "^4.13.3",
+        "webpack-node-externals": "^3.0.0",
+        "winston": "^3.8.2"
     }
 }
