--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "allowJs": false,
         "skipLibCheck": true,
-        "esModuleInterop": false,
+        "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "strictNullChecks": true,
@@ -16,7 +16,6 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "isolatedModules": true,
-        "noEmit": true,
         "jsx": "react-jsx",
         "baseUrl": ".",
         "paths": {
@@ -43,6 +42,5 @@
             }
         ]
     },
-    "include": ["src-renderer", "src", "src-common", "scripts", "common", "package.json"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+    "include": ["src-renderer", "src", "src-common", "common", "package.json", "scripts", "config"]
 }
