--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "start": "electron-vite preview",
         "dev": "cross-env SWC_NODE_PROJECT=./tsconfig.node.json node -r @swc-node/register ./scripts/dev.ts",
-        "build": "yarn type-check && electron-vite build",
+        "build": "cross-env SWC_NODE_PROJECT=./tsconfig.node.json node -r @swc-node/register ./scripts/build.ts",
         "codegen": "graphql-codegen --config codegen.yml",
         "postinstall": "electron-rebuild",
         "lint": "eslint \"./src/**/*.{tsx,ts}\" \"./src-renderer/**/*.{tsx,ts}\" \"./src-common/**/*.{tsx,ts}\"",
@@ -114,6 +114,7 @@
         "@types/sharp": "^0.31.1",
         "@types/shortid": "^0.0.29",
         "@types/string-similarity": "^4.0.0",
+        "@types/webpack-bundle-analyzer": "^4.6.0",
         "@types/webpack-node-externals": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
         "@typescript-eslint/parser": "^5.54.0",
@@ -156,6 +157,7 @@
         "ttypescript": "^1.5.15",
         "typescript": "^4.6.4",
         "webpack": "^5.79.0",
+        "webpack-bundle-analyzer": "^4.8.0",
         "webpack-dev-server": "^4.13.3",
         "webpack-node-externals": "^3.0.0",
         "winston": "^3.8.2"
