--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
         "react-use-measure": "^2.1.1",
         "source-map-support": "^0.5.21",
         "swc-loader": "^0.2.3",
+        "terser": "^5.17.0",
         "transpile-webpack-plugin": "^1.1.2",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
