build: now all required assets will be copied into dest folder

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "chokidar": "^3.5.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
+        "copy-webpack-plugin": "^11.0.0",
         "dataloader": "^2.2.2",
         "dayjs": "^1.11.7",
         "decompress": "^4.2.1",
