--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
         "graphql": "^16.6.0",
         "graphql-subscriptions": "^2.0.0",
         "graphql-tag": "^2.12.6",
+        "i18next": "^22.5.0",
+        "i18next-electron-fs-backend": "^3.0.0",
         "image-size": "^1.0.2",
         "iterall": "^1.3.0",
         "lodash": "^4.17.21",
+        "react-i18next": "^12.3.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.0",
         "serialize-error": "^8.1.0",
