refactor(library): make music list into virtualized for performance

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@nestjs/graphql": "^11.0.0",
         "@nestjs/platform-express": "^9.3.10",
         "@nestjs/typeorm": "^9.0.1",
+        "@tanstack/react-virtual": "^3.0.0-beta.54",
         "@trpc/client": "^10.19.1",
         "@trpc/react-query": "^10.19.1",
         "@trpc/server": "^10.19.1",
@@ -147,7 +148,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.7",
         "react-measure": "^2.5.2",
-        "react-merge-refs": "^2.0.1",
+        "react-merge-refs": "^2.0.2",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.8.2",
         "react-spring": "^9.7.1",
