--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "moduleResolution": "Node",
         "resolveJsonModule": true,
         "emitDecoratorMetadata": true,
+        "downlevelIteration": true,
         "experimentalDecorators": true,
         "isolatedModules": true,
         "jsx": "react-jsx",
