refactor(library): rewrite library scanning logics

--- a/config/tsconfig.main.json
+++ b/config/tsconfig.main.json
@@ -6,7 +6,8 @@
         "module": "commonjs",
         "outDir": "../out/main",
         "sourceMap": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "isolatedModules": false
     },
     "include": ["../src"],
     "exclude": ["../src-common"]
