--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "image-size": "^1.0.2",
         "iterall": "^1.3.0",
         "lodash": "^4.17.21",
+        "nsfw": "^2.2.4",
         "react-i18next": "^12.3.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.0",
