refactor(redesign): redesign search page

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
         "autosuggest-highlight": "^3.3.4",
         "chalk": "^4.1.2",
         "cross-env": "^7.0.3",
+        "css-loader": "^6.8.1",
         "electron": "^23.2.0",
         "electron-builder": "^23.6.0",
         "esbuild": "^0.17.10",
@@ -155,7 +156,9 @@
         "react-spring": "^9.7.1",
         "react-use-measure": "^2.1.1",
         "source-map-support": "^0.5.21",
+        "style-loader": "^3.3.3",
         "swc-loader": "^0.2.3",
+        "swiper": "^9.3.2",
         "terser": "^5.17.0",
         "transpile-webpack-plugin": "^1.1.2",
         "ts-jest": "^29.0.5",
