--- a/package.json
+++ b/package.json
@@ -131,10 +131,11 @@
         "electron": "^23.2.0",
         "electron-builder": "^23.6.0",
         "esbuild": "^0.17.10",
-        "eslint": "^8.35.0",
-        "eslint-config-prettier": "^8.6.0",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-unicorn": "^47.0.0",
         "fork-ts-checker-webpack-plugin": "^8.0.0",
         "html-webpack-plugin": "^5.5.1",
         "indefinite": "^2.4.2",
