make app preserve last position and size data of main window

--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -19,7 +19,8 @@
         "paths": {
             "@root/*": ["./*"],
             "@nest/*": ["./nest/*"],
-            "@electron/*": ["./electron/*"]
+            "@electron/*": ["./electron/*"],
+            "@config/*": ["./config/*"]
         }
     }
 }
