add task pipeline script for whole workspace

--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,10 @@
             "dependsOn": ["^renderer#codegen"],
             "cache": false,
             "persistent": true
+        },
+        "test": {
+            "dependsOn": ["^renderer#codegen"],
+            "cache": false
         }
     }
 }
