--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "dev": "turbo run dev",
         "lint": "turbo run lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-        "package": "turbo run package"
+        "package": "turbo run package",
+        "test": "turbo run test"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
