add test suite for window control button component

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,6 +4,7 @@
         "isolatedModules": false,
         "jsx": "react-jsx",
         "lib": ["ES2015", "DOM"],
+        "types": ["@testing-library/jest-dom"],
         "module": "ESNext",
         "target": "es6"
     },
