--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,8 @@
         "react": "^18.2.0"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/jest-dom": "^6.0.1",
+        "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.3",
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
