--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -14,6 +14,7 @@
         "@emotion/css": "^11.11.2",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.5",
         "apollo-link-logger": "^2.0.1",
         "graphql": "^16.8.0",
@@ -27,6 +28,7 @@
         "zen-observable": "^0.10.0"
     },
     "devDependencies": {
+        "@emotion/babel-plugin": "^11.11.0",
         "@graphql-codegen/cli": "^5.0.0",
         "@graphql-codegen/typescript": "^4.0.1",
         "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
