add custom scrollbar for sidebar overflowing

--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -19,6 +19,7 @@
         "apollo-link-logger": "^2.0.1",
         "graphql": "^16.8.0",
         "nanoid": "^4.0.2",
+        "rc-scrollbars": "^1.1.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
