test: add app wide test suite script

--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,9 @@
         "test": {
             "dependsOn": ["^renderer#codegen"],
             "cache": false
+        },
+        "merge-coverage": {
+            "cache": false
         }
     }
 }
