--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "lint": "turbo run lint",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "package": "turbo run package",
-        "test": "turbo run test"
+        "test": "turbo run test && turbo run merge-coverage"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
