add color mode data into main process config

--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -20,7 +20,8 @@
             "@root/*": ["./*"],
             "@nest/*": ["./nest/*"],
             "@electron/*": ["./electron/*"],
-            "@config/*": ["./config/*"]
+            "@config/*": ["./config/*"],
+            "@utils/*": ["./utils/*"]
         }
     }
 }
