implement toggling app theme feature

--- a/apps/renderer/tsconfig.json
+++ b/apps/renderer/tsconfig.json
@@ -9,7 +9,8 @@
             "@pages": ["src/pages"],
             "@pages/*": ["src/pages/*"],
             "@components/*": ["src/components/*"],
-            "@styles/*": ["src/styles/*"]
+            "@styles/*": ["src/styles/*"],
+            "@utils/*": ["src/utils/*"]
         }
     },
     "include": ["src"]
