ci: add turborepo caching action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,14 @@ jobs:
         name: Build and Test
         timeout-minutes: 15
         runs-on: ubuntu-latest
-        # To use Remote Caching, uncomment the next lines and follow the steps below.
-        # env:
-        #  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-        #  TURBO_TEAM: ${{ vars.TURBO_TEAM }}
 
         steps:
             - name: Check out code
               uses: actions/checkout@v3
               with:
                   fetch-depth: 2
+
+            - uses: dtinth/setup-github-actions-caching-for-turbo@v1
 
             - name: Install Node.js
               uses: actions/setup-node@v3
