implement artist entity

--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -25,7 +25,8 @@
             "@library/*": ["./library/*"],
             "@music/*": ["./music/*"],
             "@base/*": ["./base/*"],
-            "@album/*": ["./album/*"]
+            "@album/*": ["./album/*"],
+            "@artist/*": ["./artist/*"]
         }
     }
 }
