--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,24 +14,25 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.5",
+        "@react-spring/web": "^9.7.3",
         "nanoid": "^4.0.2",
         "react": "^18.2.0",
         "react-use-measure": "^2.1.1"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.0.1",
+        "@testing-library/jest-dom": "^6.1.2",
         "@testing-library/react": "^14.0.0",
-        "@types/jest": "^29.5.3",
+        "@types/jest": "^29.5.4",
         "@types/react": "^18.2.20",
         "@types/react-dom": "^18.2.7",
         "eslint": "^8.47.0",
         "eslint-config-custom": "*",
-        "jest": "^29.6.2",
-        "jest-environment-jsdom": "^29.6.2",
+        "jest": "^29.6.4",
+        "jest-environment-jsdom": "^29.6.4",
         "resize-observer-polyfill": "^1.5.1",
         "ts-jest": "^29.1.1",
         "tsconfig": "workspace:*",
         "types": "workspace:*",
-        "typescript": "^5.2.1-rc"
+        "typescript": "^5.2.2"
     }
 }
