--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -68,7 +68,7 @@
         "tsconfig-paths": "^4.2.0",
         "tsconfig-paths-webpack-plugin": "^4.1.0",
         "types": "workspace:*",
-        "typescript": "^5.2.1-rc",
+        "typescript": "^5.2.2",
         "webpack": "^5.88.2",
         "webpack-bundle-analyzer": "^4.9.0",
         "webpack-cli": "^5.1.4"
