feat(library): add bare implementation of media library (#12)

--- a/apps/main/tsconfig.json
+++ b/apps/main/tsconfig.json
@@ -21,7 +21,12 @@
             "@nest/*": ["./nest/*"],
             "@electron/*": ["./electron/*"],
             "@config/*": ["./config/*"],
-            "@utils/*": ["./utils/*"]
+            "@utils/*": ["./utils/*"],
+            "@library/*": ["./library/*"],
+            "@music/*": ["./music/*"],
+            "@base/*": ["./base/*"],
+            "@album/*": ["./album/*"],
+            "@artist/*": ["./artist/*"]
         }
     }
 }
