--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -10,22 +10,30 @@
         "build": "rimraf ./dist && webpack --config ./webpack.config.ts",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest --coverage",
-        "e2e": "jest --config ./test/jest-e2e.json"
+        "e2e": "jest --config ./test/jest-e2e.json",
+        "rebuild": "electron-rebuild"
     },
     "dependencies": {
+        "@async3619/merry-go-round": "^1.4.0",
         "@nestjs/apollo": "^12.0.7",
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/graphql": "^12.0.8",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/typeorm": "^10.0.0",
+        "better-sqlite3": "^8.5.1",
+        "fast-glob": "^3.3.1",
         "fs-extra": "^11.1.1",
         "get-port": "^5.1.1",
         "graphql": "^16.8.0",
         "graphql-subscriptions": "^2.0.0",
         "i18next-electron-fs-backend": "^3.0.0",
         "iterall": "^1.3.0",
+        "lodash": "^4.17.21",
+        "music-metadata": "^7.13.4",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
+        "typeorm": "^0.3.17",
         "zen-observable": "^0.10.0",
         "zod": "^3.22.2"
     },
@@ -34,12 +42,14 @@
         "@apollo/server": "^4.9.1",
         "@as-integrations/fastify": "^2.1.0",
         "@electron-toolkit/utils": "^2.0.0",
+        "@electron/rebuild": "^3.3.0",
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jest": "^29.5.2",
+        "@types/lodash": "^4.14.197",
         "@types/node": "^20.3.1",
         "@types/supertest": "^2.0.12",
         "@types/webpack-bundle-analyzer": "^4.6.0",
@@ -58,7 +68,7 @@
         "tsconfig-paths": "^4.2.0",
         "tsconfig-paths-webpack-plugin": "^4.1.0",
         "types": "workspace:*",
-        "typescript": "^5.2.1-rc",
+        "typescript": "^5.2.2",
         "webpack": "^5.88.2",
         "webpack-bundle-analyzer": "^4.9.0",
         "webpack-cli": "^5.1.4"
