--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -49,6 +49,7 @@
         "tsconfig": "workspace:*",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
-        "vite-tsconfig-paths": "^4.2.0"
+        "vite-tsconfig-paths": "^4.2.0",
+        "utils": "workspace:*"
     }
 }
