--- a/apps/renderer/package.json
+++ b/apps/renderer/package.json
@@ -2,7 +2,7 @@
     "name": "renderer",
     "private": true,
     "version": "0.0.0",
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "build": "tsc && vite build",
         "preview": "vite preview",
@@ -17,6 +17,7 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/material": "^5.14.5",
         "apollo-link-logger": "^2.0.1",
+        "change-case": "^4.1.2",
         "graphql": "^16.8.0",
         "i18next": "^23.4.4",
         "i18next-electron-fs-backend": "^3.0.0",
@@ -32,7 +33,8 @@
         "serialize-error": "^11.0.1",
         "types": "workspace:*",
         "ui": "workspace:*",
-        "zen-observable": "^0.10.0"
+        "zen-observable": "^0.10.0",
+        "zod": "^3.22.2"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "^11.11.0",
