implement playlist creation from playlist feature

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
         "@mui/material": "^5.14.5",
         "@react-spring/web": "^9.7.3",
         "@tanstack/react-virtual": "3.0.0-beta.54",
+        "material-ui-popup-state": "^5.0.9",
         "nanoid": "^4.0.2",
         "react": "^18.2.0",
         "react-hook-form": "^7.45.4",
